<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen android:title="Set All Statusbar Colors to Stock" android:summary="This feature temporarily disables the custom colors so they wont make any interference if you have a theme active.">
        <com.wubydax.romcontrol.v2.prefs.FilePreference android:title="Set all native Statusbar colors to stock" android:key="modcfg_statusbar_colors" android:defaultValue="false" android:summaryOn="Statusbar colors set to stock" android:summaryOff="Option disabled" app:packageNameToKill="com.android.systemui" />
    </PreferenceScreen>
    <PreferenceCategory android:title="Statusbar Batteries">
        <PreferenceScreen android:title="Battery Icon Settings" android:summary="Select your Battery type, icons, colors, etc">
            <PreferenceCategory android:title="Battery Icon Settings" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_icon_entries" android:title="Battery Icon Type" android:key="battery_icon_type" android:defaultValue="0" android:entryValues="@array/battery_icon_values" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Percentage in battery icon" android:key="status_bar_show_battery_percent" android:defaultValue="0" android:summaryOn="shown" android:summaryOff="hide" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Display Percentage" android:key="display_battery_percentage" android:defaultValue="true" android:summaryOn="Battery text shown" android:summaryOff="Battery text is hidden" />
            <PreferenceScreen android:title="Battery Bar" android:summary="Graphical battery display">
                <PreferenceScreen android:title="Battery Bar" />
                <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_entries" android:title="Battery Bar" android:key="battery_bar" android:defaultValue="0" android:entryValues="@array/battery_bar_values" />
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Battery bar animation" android:key="battery_bar_animate" android:defaultValue="true" android:summaryOn="Charging animation enabled" android:summaryOff="Animation disabled" />
                <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_style_entries" android:title="Battery bar style" android:key="battery_bar_style" android:defaultValue="1" android:entryValues="@array/battery_bar_style_values" />
                <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_thickness_entries" android:title="Thickness of battery bar" android:key="battery_bar_thickness" android:defaultValue="1" android:entryValues="@array/battery_bar_thickness_values" />
                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Battery Bar Color" android:key="battery_bar_color" android:summary="Choose color of battery bar" android:defaultValue="\#ff33b5e5" />
            </PreferenceScreen>
            <com.wubydax.romcontrol.v2.prefs.OpenAppPreference android:title="3Minit Battery Mod" app:componentName="com.three.minit.minitbatterysettings/com.three.minit.minitbatterysettings.MainActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="Statusbar Clock">
        <PreferenceScreen android:title="Statusbar Clock Options" android:summary="Custom clock settings">
            <PreferenceCategory android:title="Statusbar Clock" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Show Clock and Date" android:key="status_bar_clock" android:defaultValue="true" android:summaryOn="Clock shown" android:summaryOff="Clock hidden" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Uppercase Text Clock" android:key="normal_upper" android:dependency="status_bar_clock" android:defaultValue="false" android:summaryOn="Uppercase enabled" android:summaryOff="Disabled" />
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Clock Color" android:key="statusbar_clock_color" android:summary="Change clock color" android:dependency="status_bar_clock" android:defaultValue="\#ffffffff" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_format_entries" android:title="Clock Format" android:key="statusbar_clock_format" android:dependency="status_bar_clock" android:defaultValue="1" android:entryValues="@array/clock_format_values" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_style_entries" android:title="Clock Location" android:key="statusbar_clock_style" android:dependency="status_bar_clock" android:defaultValue="0" android:entryValues="@array/clock_style_values" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/entries_status_bar_am_pm" android:title="Clock AM/PM" android:key="statusbar_clock_am_pm_style" android:dependency="status_bar_clock" android:defaultValue="2" android:entryValues="@array/values_status_bar_am_pm" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_font_style_entries" android:title="Clock Font Style" android:key="statusbar_clock_font_style" android:dependency="status_bar_clock" android:defaultValue="5" android:entryValues="@array/clock_font_style_values" />
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:title="Clock Scaling" android:key="statusbar_clock_scale" android:summary="Adjust clock size" android:dependency="status_bar_clock" android:defaultValue="15" app:minValue="5" app:maxValue="25" app:unitsValue="dp" />
            <PreferenceCategory android:title="Statusbar Date" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_date_display_entries" android:title="Date Display Type" android:key="statusbar_clock_date_display" android:dependency="status_bar_clock" android:defaultValue="0" android:entryValues="@array/clock_date_display_values" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_date_style_entries" android:title="Date Style" android:key="statusbar_clock_date_style" android:dependency="status_bar_clock" android:defaultValue="0" android:entryValues="@array/clock_date_style_values" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_date_format_entries_values" android:title="Date Format" android:key="statusbar_clock_date_format" android:dependency="status_bar_clock" android:defaultValue="EEE" android:entryValues="@array/clock_date_format_entries_values" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="Signal Position" />
    <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/SignalPositionName" android:title="Signal Position" android:key="leftsignal" android:defaultValue="0" android:entryValues="@array/SignalPositionValue" />
    <PreferenceCategory android:title="Statusbar Icons">
        <PreferenceScreen android:title="Statusbar Icon Toggles" android:summary="Show or hide icons on the statusbar">
            <PreferenceCategory android:title="Statusbar Icons" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Alarm Icon *" android:key="alarm_icon" android:defaultValue="true" android:summaryOn="Alarm icon is shown" android:summaryOff="Alarm icon now hidden" app:packageNameToKill="com.android.systemui" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Bluetooth Icon *" android:key="bluetooth_icon" android:defaultValue="true" android:summaryOn="Icon is shown" android:summaryOff="Icon is now hidden" app:packageNameToKill="com.android.systemui" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Vibrate/Silent Icon *" android:key="volume_icon" android:defaultValue="true" android:summaryOn="Sound icons now shown" android:summaryOff="Sound icons now hidden" app:packageNameToKill="com.android.systemui" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="Dynamic StatusBar">
        <PreferenceScreen android:title="@string/dynamic_status_bar_title" android:summary="This really cool effect will blend the statusbar colors to adapt to the currently opened application.">
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Dynamic StatusBar Master Switch" android:key="dynamic_toggle" android:defaultValue="true" android:summaryOn="Dynamic StatusBar features enabled" android:summaryOff="Dynamic StatusBar features disabled" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/dynamic_status_bar_color_title" android:key="dynamic_status_bar_color_state" android:summary="@string/dynamic_status_bar_color_summary" android:dependency="dynamic_toggle" android:defaultValue="0" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/dsb_gradient_filter_entries" android:title="@string/dynamic_status_bar_gradient_title" android:key="dynamic_status_bar_gradient_state" android:summary="@string/dynamic_status_bar_gradient_summary" android:dependency="dynamic_toggle" android:defaultValue="0" android:entryValues="@array/dsb_gradient_filter_values" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/dsb_gradient_filter_entries" android:title="@string/dynamic_status_bar_filter_title" android:key="dynamic_status_bar_filter_state" android:summary="@string/dynamic_status_bar_filter_summary" android:dependency="dynamic_toggle" android:defaultValue="0" android:entryValues="@array/dsb_gradient_filter_values" />
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:max="70" android:title="@string/dynamic_status_bar_filter_value" android:key="dynamic_status_bar_filter_value" android:dependency="dynamic_toggle" android:defaultValue="0" min="0" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="Traffic Meter">
        <PreferenceScreen android:title="Traffic Meter" android:summary="Network traffic settings">
            <PreferenceCategory android:title="Statusbar Networkspeed">
                <PreferenceScreen android:title="Network traffic preferences">
                    <PreferenceCategory android:title="Traffic Position">
                        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/traffic_style_entries_position" android:title="Traffic Position" android:key="change_traffic_position" android:defaultValue="0" android:entryValues="@array/traffic_style_values_position" />
                    </PreferenceCategory>
                    <PreferenceCategory android:title="Network data">
                        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/traffic_state_items" android:title="Displayed traffic info" android:key="network_traffic_state" android:defaultValue="3" android:entryValues="@array/traffic_state_values" app:dependentValue="0" />
                        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Display data in Bytes" android:key="network_traffic_unit" android:dependency="network_traffic_state" android:defaultValue="true" android:summaryOn="Displayed in Bytes" android:summaryOff="Displayed in Bits (default)" />
                    </PreferenceCategory>
                    <PreferenceCategory android:title="Arrows display preferences" android:dependency="network_traffic_state">
                        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Show traffic arrows" android:key="network_traffic_show_arrows" android:dependency="network_traffic_state" android:defaultValue="true" android:summaryOn="Shown" android:summaryOff="Hidden" />
                        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/arrow_position_entries" android:title="Arrows position" android:key="network_traffic_arrows_position" android:dependency="network_traffic_show_arrows" android:defaultValue="0" android:entryValues="@array/arrow_position_values" />
                    </PreferenceCategory>
                    <PreferenceCategory android:title="Display options" android:dependency="network_traffic_state">
                        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Autohide on low traffic" android:key="network_traffic_autohide" android:defaultValue="false" android:summaryOn="Enabled" android:summaryOff="Displayed always" />
                        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:title="Autohide threshold" android:key="network_traffic_threshold" android:dependency="network_traffic_autohide" android:defaultValue="10" app:maxValue="100" app:unitsValue="Kb" />
                        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/traffic_style_entries" android:title="Font style" android:key="network_traffic_text_style" android:defaultValue="0" android:entryValues="@array/traffic_style_entries" />
                        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:title="Text size scale factor" android:key="network_traffic_scale" android:defaultValue="10" app:maxValue="10" />
                    </PreferenceCategory>
                    <PreferenceCategory android:title="Network traffic colors" android:dependency="network_traffic_state">
                        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Separate colors for text and arrows" android:key="network_traffic_global_color" android:defaultValue="true" android:summaryOn="Text and arrows can be colored separately" android:summaryOff="Text color will apply to arrows as well" />
                        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Traffic text color" android:key="network_traffic_color" android:defaultValue="\#ffffff" />
                        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Traffic arrows color" android:key="network_traffic_arrow_color" android:dependency="network_traffic_global_color" android:defaultValue="\#ffffff" />
                    </PreferenceCategory>
                </PreferenceScreen>
            </PreferenceCategory>
            <PreferenceScreen android:title="Combined meter">
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Single line speed meter" android:key="db_pen_hovering_esztlws_ink_effect" android:defaultValue="0" android:summaryOn="enabled" android:summaryOff="disabled" />
                <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/nemesis_network" android:title="Refresh Rate" android:key="db_inkeffect_esztlwssxsl_picker" android:summary="Set the status bar refresh interval speeds" android:dependency="db_pen_hovering_esztlws_ink_effect" android:defaultValue="500" android:entryValues="@array/nemesis_network_values" />
            </PreferenceScreen>
            <PreferenceScreen android:title="Seprate in/out meter">
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Double line speed meter" android:key="db_pen_hovering_esztlshws_ink_effect" android:defaultValue="0" android:summaryOn="enabled" android:summaryOff="disabled" />
                <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/nemesis_network" android:title="Refresh Rate" android:key="db_inkeffect_esztlshwssxsl_picker" android:summary="Set the status bar refresh interval speeds" android:dependency="db_pen_hovering_esztlshws_ink_effect" android:defaultValue="500" android:entryValues="@array/nemesis_network_values" />
            </PreferenceScreen>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="Carrier Label">
        <PreferenceScreen android:persistent="false" android:title="Carrier Label" android:summary="Show/hide and colors">
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="To display the operator" android:key="es_carrier_status_label_onoff" android:defaultValue="0" android:summaryOn="enabled" android:summaryOff="disabled" />
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Change Color" android:key="es_carrier_status_label_color" android:dialogTitle="Change Color" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title=" ListView Effects " />
    <PreferenceScreen android:title="Mokee Listview Animations">
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/listview_animation_entries" android:title="Listview animation" android:key="listview_animation" android:summary="%s" android:entryValues="@array/listview_animation_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/listview_interpolator_entries" android:title="Listview interpolator" android:key="listview_interpolator" android:summary="%s" android:entryValues="@array/listview_interpolator_values" />
    </PreferenceScreen>
</PreferenceScreen>